test/constrained-generics/hashable/user-hash-no-implements-weird.good
user-hash-no-implements-weird.chpl:14: error: R has a hash function, but does not implement Hashable
